crates/pgls_pretty_print/tests/snapshots/multi/tests__drop_if_exists_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/drop_if_exists.sql
snapshot_kind: text
---
DROP TABLE "test_exists";

DROP TABLE IF EXISTS "test_exists";

CREATE TABLE test_exists (
  a INT,
  b TEXT
);

DROP VIEW "test_view_exists";

DROP VIEW IF EXISTS "test_view_exists";

CREATE VIEW test_view_exists
AS SELECT * FROM test_exists;

DROP VIEW IF EXISTS "test_view_exists";

DROP VIEW "test_view_exists";

DROP INDEX "test_index_exists";

DROP INDEX IF EXISTS "test_index_exists";

CREATE INDEX "test_index_exists" ON test_exists USING btree (a);

DROP INDEX IF EXISTS "test_index_exists";

DROP INDEX "test_index_exists";

DROP SEQUENCE "test_sequence_exists";

DROP SEQUENCE IF EXISTS "test_sequence_exists";

CREATE SEQUENCE test_sequence_exists;

DROP SEQUENCE IF EXISTS "test_sequence_exists";

DROP SEQUENCE "test_sequence_exists";

DROP SCHEMA test_schema_exists;

DROP SCHEMA IF EXISTS test_schema_exists;

CREATE SCHEMA "test_schema_exists";

DROP SCHEMA IF EXISTS test_schema_exists;

DROP SCHEMA test_schema_exists;

DROP TYPE test_type_exists;

DROP TYPE IF EXISTS test_type_exists;

CREATE TYPE test_type_exists AS (a INT, b TEXT);

DROP TYPE IF EXISTS test_type_exists;

DROP TYPE test_type_exists;

DROP DOMAIN test_domain_exists;

DROP DOMAIN IF EXISTS test_domain_exists;

CREATE DOMAIN test_domain_exists AS INT NOT NULL CHECK (value > 0);

DROP DOMAIN IF EXISTS test_domain_exists;

DROP DOMAIN test_domain_exists;

CREATE USER regress_test_u1;

CREATE ROLE regress_test_r1;

CREATE GROUP regress_test_g1;

DROP ROLE regress_test_u2;

DROP ROLE IF EXISTS regress_test_u1, regress_test_u2;

DROP ROLE regress_test_u1;

DROP ROLE regress_test_r2;

DROP ROLE IF EXISTS regress_test_r1, regress_test_r2;

DROP ROLE regress_test_r1;

DROP ROLE regress_test_g2;

DROP ROLE IF EXISTS regress_test_g1, regress_test_g2;

DROP ROLE regress_test_g1;

DROP COLLATION IF EXISTS "test_collation_exists";

DROP CONVERSION "test_conversion_exists";

DROP CONVERSION IF EXISTS "test_conversion_exists";

CREATE CONVERSION test_conversion_exists
FOR 'LATIN1' TO 'UTF8'
FROM iso8859_1_to_utf8;

DROP CONVERSION "test_conversion_exists";

DROP TEXT SEARCH PARSER "test_tsparser_exists";

DROP TEXT SEARCH PARSER IF EXISTS "test_tsparser_exists";

DROP TEXT SEARCH DICTIONARY "test_tsdict_exists";

DROP TEXT SEARCH DICTIONARY IF EXISTS "test_tsdict_exists";

CREATE TEXT SEARCH DICTIONARY test_tsdict_exists (
  template = ispell,
  dictfile = ispell_sample,
  afffile = ispell_sample
);

DROP TEXT SEARCH DICTIONARY "test_tsdict_exists";

DROP TEXT SEARCH TEMPLATE "test_tstemplate_exists";

DROP TEXT SEARCH TEMPLATE IF EXISTS "test_tstemplate_exists";

DROP TEXT SEARCH CONFIGURATION "test_tsconfig_exists";

DROP TEXT SEARCH CONFIGURATION IF EXISTS "test_tsconfig_exists";

CREATE TEXT SEARCH CONFIGURATION test_tsconfig_exists (copy = english);

DROP TEXT SEARCH CONFIGURATION "test_tsconfig_exists";

DROP EXTENSION test_extension_exists;

DROP EXTENSION IF EXISTS test_extension_exists;

DROP FUNCTION test_function_exists();

DROP FUNCTION IF EXISTS test_function_exists();

DROP FUNCTION test_function_exists(INT, TEXT, INT[]);

DROP FUNCTION IF EXISTS test_function_exists(INT, TEXT, INT[]);

DROP AGGREGATE test_aggregate_exists(*);

DROP AGGREGATE IF EXISTS test_aggregate_exists(*);

DROP AGGREGATE test_aggregate_exists(INT);

DROP AGGREGATE IF EXISTS test_aggregate_exists(INT);

DROP OPERATOR @#@ (INT, INT);

DROP OPERATOR IF EXISTS @#@ (INT, INT);

CREATE OPERATOR @#@ (LEFTARG = BIGINT, RIGHTARG = BIGINT, PROCEDURE = int8xor);

DROP OPERATOR @#@ (BIGINT, BIGINT);

DROP LANGUAGE test_language_exists;

DROP LANGUAGE IF EXISTS test_language_exists;

DROP CAST (TEXT AS TEXT);

DROP CAST IF EXISTS (TEXT AS TEXT);

DROP TRIGGER "test_trigger_exists" ON "test_exists";

DROP TRIGGER IF EXISTS "test_trigger_exists" ON "test_exists";

DROP TRIGGER "test_trigger_exists" ON "no_such_table";

DROP TRIGGER IF EXISTS "test_trigger_exists" ON "no_such_table";

DROP TRIGGER "test_trigger_exists" ON "no_such_schema"."no_such_table";

DROP TRIGGER IF EXISTS
  "test_trigger_exists" ON "no_such_schema"."no_such_table";

CREATE TRIGGER test_trigger_exists
  BEFORE UPDATE
  ON test_exists
  FOR EACH ROW
  EXECUTE FUNCTION suppress_redundant_updates_trigger();

DROP TRIGGER "test_trigger_exists" ON "test_exists";

DROP RULE "test_rule_exists" ON "test_exists";

DROP RULE IF EXISTS "test_rule_exists" ON "test_exists";

DROP RULE "test_rule_exists" ON "no_such_table";

DROP RULE IF EXISTS "test_rule_exists" ON "no_such_table";

DROP RULE "test_rule_exists" ON "no_such_schema"."no_such_table";

DROP RULE IF EXISTS "test_rule_exists" ON "no_such_schema"."no_such_table";

CREATE RULE test_rule_exists
AS ON INSERT TO test_exists
DO INSTEAD
  INSERT INTO test_exists
  VALUES
    (new.a, new.b || CAST(new.a AS TEXT));;

DROP RULE "test_rule_exists" ON "test_exists";

DROP FOREIGN DATA WRAPPER test_fdw_exists;

DROP FOREIGN DATA WRAPPER IF EXISTS test_fdw_exists;

DROP SERVER test_server_exists;

DROP SERVER IF EXISTS test_server_exists;

DROP OPERATOR CLASS "test_operator_class" USING "btree";

DROP OPERATOR CLASS IF EXISTS "test_operator_class" USING "btree";

DROP OPERATOR CLASS "test_operator_class" USING "no_such_am";

DROP OPERATOR CLASS IF EXISTS "test_operator_class" USING "no_such_am";

DROP OPERATOR FAMILY "test_operator_family" USING "btree";

DROP OPERATOR FAMILY IF EXISTS "test_operator_family" USING "btree";

DROP OPERATOR FAMILY "test_operator_family" USING "no_such_am";

DROP OPERATOR FAMILY IF EXISTS "test_operator_family" USING "no_such_am";

DROP ACCESS METHOD no_such_am;

DROP ACCESS METHOD IF EXISTS no_such_am;

DROP TABLE IF EXISTS "test_exists";

DROP TABLE "test_exists";

DROP AGGREGATE IF EXISTS no_such_schema.foo(INT);

DROP AGGREGATE IF EXISTS foo(no_such_type);

DROP AGGREGATE IF EXISTS foo(no_such_schema.no_such_type);

DROP CAST IF EXISTS (INT AS no_such_type2);

DROP CAST IF EXISTS (no_such_type1 AS INT);

DROP CAST IF EXISTS (INT AS no_such_schema.bar);

DROP CAST IF EXISTS (no_such_schema.foo AS INT);

DROP COLLATION IF EXISTS "no_such_schema"."foo";

DROP CONVERSION IF EXISTS "no_such_schema"."foo";

DROP DOMAIN IF EXISTS no_such_schema.foo;

DROP FOREIGN TABLE IF EXISTS "no_such_schema"."foo";

DROP FUNCTION IF EXISTS no_such_schema.foo();

DROP FUNCTION IF EXISTS foo(no_such_type);

DROP FUNCTION IF EXISTS foo(no_such_schema.no_such_type);

DROP INDEX IF EXISTS "no_such_schema"."foo";

DROP MATERIALIZED VIEW IF EXISTS "no_such_schema"."foo";

DROP OPERATOR IF EXISTS no_such_schema.+ (INT, INT);

DROP OPERATOR IF EXISTS + (no_such_type, no_such_type);

DROP OPERATOR IF EXISTS
  + (
    no_such_schema.no_such_type,
    no_such_schema.no_such_type);

DROP OPERATOR IF EXISTS # (NONE, no_such_schema.no_such_type);

DROP OPERATOR CLASS IF EXISTS "no_such_schema"."widget_ops" USING "btree";

DROP OPERATOR FAMILY IF EXISTS "no_such_schema"."float_ops" USING "btree";

DROP RULE IF EXISTS "foo" ON "no_such_schema"."bar";

DROP SEQUENCE IF EXISTS "no_such_schema"."foo";

DROP TABLE IF EXISTS "no_such_schema"."foo";

DROP TEXT SEARCH CONFIGURATION IF EXISTS "no_such_schema"."foo";

DROP TEXT SEARCH DICTIONARY IF EXISTS "no_such_schema"."foo";

DROP TEXT SEARCH PARSER IF EXISTS "no_such_schema"."foo";

DROP TEXT SEARCH TEMPLATE IF EXISTS "no_such_schema"."foo";

DROP TRIGGER IF EXISTS "foo" ON "no_such_schema"."bar";

DROP TYPE IF EXISTS no_such_schema.foo;

DROP VIEW IF EXISTS "no_such_schema"."foo";

CREATE FUNCTION test_ambiguous_funcname(INT)
RETURNS INT
AS ' select $1; '
LANGUAGE "sql";

CREATE FUNCTION test_ambiguous_funcname(TEXT)
RETURNS TEXT
AS ' select $1; '
LANGUAGE "sql";

DROP FUNCTION test_ambiguous_funcname;

DROP FUNCTION IF EXISTS test_ambiguous_funcname;

DROP FUNCTION test_ambiguous_funcname(INT);

DROP FUNCTION test_ambiguous_funcname(TEXT);

CREATE PROCEDURE test_ambiguous_procname(INT)
AS ' begin end; '
LANGUAGE "plpgsql";

CREATE PROCEDURE test_ambiguous_procname(TEXT)
AS ' begin end; '
LANGUAGE "plpgsql";

DROP PROCEDURE test_ambiguous_procname;

DROP PROCEDURE IF EXISTS test_ambiguous_procname;

DROP ROUTINE IF EXISTS test_ambiguous_procname;

DROP PROCEDURE test_ambiguous_procname(INT);

DROP PROCEDURE test_ambiguous_procname(TEXT);

DROP DATABASE test_database_exists (FORCE);

DROP DATABASE test_database_exists;

DROP DATABASE IF EXISTS test_database_exists (FORCE);

DROP DATABASE IF EXISTS test_database_exists;
