crates/pgls_pretty_print/tests/snapshots/multi/tests__equivclass_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/equivclass.sql
snapshot_kind: text
---
CREATE TYPE int8alias1;

CREATE FUNCTION int8alias1in(cstring)
RETURNS int8alias1
STRICT
IMMUTABLE
LANGUAGE "internal"
AS 'int8in';

CREATE FUNCTION int8alias1out(int8alias1)
RETURNS cstring
STRICT
IMMUTABLE
LANGUAGE "internal"
AS 'int8out';

CREATE TYPE int8alias1
(
  input = int8alias1in,
  output = int8alias1out,
  like = BIGINT
);

CREATE TYPE int8alias2;

CREATE FUNCTION int8alias2in(cstring)
RETURNS int8alias2
STRICT
IMMUTABLE
LANGUAGE "internal"
AS 'int8in';

CREATE FUNCTION int8alias2out(int8alias2)
RETURNS cstring
STRICT
IMMUTABLE
LANGUAGE "internal"
AS 'int8out';

CREATE TYPE int8alias2
(
  input = int8alias2in,
  output = int8alias2out,
  like = BIGINT
);

CREATE CAST (BIGINT AS int8alias1) WITHOUT FUNCTION;

CREATE CAST (BIGINT AS int8alias2) WITHOUT FUNCTION;

CREATE CAST (int8alias1 AS BIGINT) WITHOUT FUNCTION;

CREATE CAST (int8alias2 AS BIGINT) WITHOUT FUNCTION;

CREATE FUNCTION int8alias1eq(int8alias1, int8alias1)
RETURNS BOOLEAN
STRICT
IMMUTABLE
LANGUAGE "internal"
AS 'int8eq';

CREATE OPERATOR = (PROCEDURE = int8alias1eq,
LEFTARG = int8alias1,
RIGHTARG = int8alias1,
COMMUTATOR = =,
RESTRICT = eqsel,
JOIN = eqjoinsel,
MERGES);

ALTER OPERATOR FAMILY integer_ops USING btree
  ADD OPERATOR 3 = (int8alias1, int8alias1);

CREATE FUNCTION int8alias2eq(int8alias2, int8alias2)
RETURNS BOOLEAN
STRICT
IMMUTABLE
LANGUAGE "internal"
AS 'int8eq';

CREATE OPERATOR = (PROCEDURE = int8alias2eq,
LEFTARG = int8alias2,
RIGHTARG = int8alias2,
COMMUTATOR = =,
RESTRICT = eqsel,
JOIN = eqjoinsel,
MERGES);

ALTER OPERATOR FAMILY integer_ops USING btree
  ADD OPERATOR 3 = (int8alias2, int8alias2);

CREATE FUNCTION int8alias1eq(BIGINT, int8alias1)
RETURNS BOOLEAN
STRICT
IMMUTABLE
LANGUAGE "internal"
AS 'int8eq';

CREATE OPERATOR = (PROCEDURE = int8alias1eq,
LEFTARG = BIGINT,
RIGHTARG = int8alias1,
RESTRICT = eqsel,
JOIN = eqjoinsel,
MERGES);

ALTER OPERATOR FAMILY integer_ops USING btree
  ADD OPERATOR 3 = (BIGINT, int8alias1);

CREATE FUNCTION int8alias1eq(int8alias1, int8alias2)
RETURNS BOOLEAN
STRICT
IMMUTABLE
LANGUAGE "internal"
AS 'int8eq';

CREATE OPERATOR = (PROCEDURE = int8alias1eq,
LEFTARG = int8alias1,
RIGHTARG = int8alias2,
RESTRICT = eqsel,
JOIN = eqjoinsel,
MERGES);

ALTER OPERATOR FAMILY integer_ops USING btree
  ADD OPERATOR 3 = (int8alias1, int8alias2);

CREATE FUNCTION int8alias1lt(int8alias1, int8alias1)
RETURNS BOOLEAN
STRICT
IMMUTABLE
LANGUAGE "internal"
AS 'int8lt';

CREATE OPERATOR < (PROCEDURE = int8alias1lt,
LEFTARG = int8alias1,
RIGHTARG = int8alias1);

ALTER OPERATOR FAMILY integer_ops USING btree
  ADD OPERATOR 1 < (int8alias1, int8alias1);

CREATE FUNCTION int8alias1cmp(BIGINT, int8alias1)
RETURNS INT
STRICT
IMMUTABLE
LANGUAGE "internal"
AS 'btint8cmp';

ALTER OPERATOR FAMILY integer_ops USING btree
  ADD FUNCTION 1 int8alias1cmp(BIGINT, int8alias1);

CREATE TABLE ec0 (
  ff BIGINT PRIMARY KEY,
  f1 BIGINT,
  f2 BIGINT
);

CREATE TABLE ec1 (
  ff BIGINT PRIMARY KEY,
  f1 int8alias1,
  f2 int8alias2
);

CREATE TABLE ec2 (
  xf BIGINT PRIMARY KEY,
  x1 int8alias1,
  x2 int8alias2
);

SET enable_hashjoin = off;

SET enable_mergejoin = off;

SELECT * FROM ec0 WHERE ff = f1 AND f1 = CAST('42' AS BIGINT);

SELECT * FROM ec0 WHERE ff = f1 AND f1 = CAST('42' AS int8alias1);

SELECT * FROM ec1 WHERE ff = f1 AND f1 = CAST('42' AS int8alias1);

SELECT * FROM ec1 WHERE ff = f1 AND f1 = CAST('42' AS int8alias2);

SELECT * FROM ec1, ec2 WHERE ff = x1 AND ff = CAST('42' AS BIGINT);

SELECT * FROM ec1, ec2 WHERE ff = x1 AND ff = CAST('42' AS int8alias1);

SELECT * FROM ec1, ec2 WHERE ff = x1 AND CAST('42' AS BIGINT) = x1;

SELECT * FROM ec1, ec2 WHERE ff = x1 AND x1 = CAST('42' AS int8alias1);

SELECT * FROM ec1, ec2 WHERE ff = x1 AND x1 = CAST('42' AS int8alias2);

CREATE UNIQUE INDEX "ec1_expr1" ON ec1 USING btree ((ff + 1));

CREATE UNIQUE INDEX "ec1_expr2" ON ec1 USING btree ((ff + 2 + 1));

CREATE UNIQUE INDEX "ec1_expr3" ON ec1 USING btree ((ff + 3 + 1));

CREATE UNIQUE INDEX "ec1_expr4" ON ec1 USING btree ((ff + 4));

SELECT
  *
FROM
  ec1,
  (SELECT
    ff + 1 AS x
  FROM
    (SELECT ff + 2 AS ff FROM ec1
    UNION ALL
    SELECT ff + 3 AS ff FROM ec1)
    AS ss0
  UNION ALL
  SELECT ff + 4 AS x FROM ec1)
  AS ss1
WHERE
  ss1.x = ec1.f1 AND
  ec1.ff = CAST(42 AS BIGINT);

SELECT
  *
FROM
  ec1,
  (SELECT
    ff + 1 AS x
  FROM
    (SELECT ff + 2 AS ff FROM ec1
    UNION ALL
    SELECT ff + 3 AS ff FROM ec1)
    AS ss0
  UNION ALL
  SELECT ff + 4 AS x FROM ec1)
  AS ss1
WHERE
  ss1.x = ec1.f1 AND
  ec1.ff = CAST(42 AS BIGINT) AND
  ec1.ff = ec1.f1;

SELECT
  *
FROM
  ec1,
  (SELECT
    ff + 1 AS x
  FROM
    (SELECT ff + 2 AS ff FROM ec1
    UNION ALL
    SELECT ff + 3 AS ff FROM ec1)
    AS ss0
  UNION ALL
  SELECT ff + 4 AS x FROM ec1)
  AS ss1,
  (SELECT
    ff + 1 AS x
  FROM
    (SELECT ff + 2 AS ff FROM ec1
    UNION ALL
    SELECT ff + 3 AS ff FROM ec1)
    AS ss0
  UNION ALL
  SELECT ff + 4 AS x FROM ec1)
  AS ss2
WHERE
  ss1.x = ec1.f1 AND
  ss1.x = ss2.x AND
  ec1.ff = CAST(42 AS BIGINT);

SET enable_mergejoin = 'on';

SET enable_nestloop = off;

SELECT
  *
FROM
  ec1,
  (SELECT
    ff + 1 AS x
  FROM
    (SELECT ff + 2 AS ff FROM ec1
    UNION ALL
    SELECT ff + 3 AS ff FROM ec1)
    AS ss0
  UNION ALL
  SELECT ff + 4 AS x FROM ec1)
  AS ss1,
  (SELECT
    ff + 1 AS x
  FROM
    (SELECT ff + 2 AS ff FROM ec1
    UNION ALL
    SELECT ff + 3 AS ff FROM ec1)
    AS ss0
  UNION ALL
  SELECT ff + 4 AS x FROM ec1)
  AS ss2
WHERE
  ss1.x = ec1.f1 AND
  ss1.x = ss2.x AND
  ec1.ff = CAST(42 AS BIGINT);

SET enable_nestloop = 'on';

SET enable_mergejoin = off;

DROP INDEX "ec1_expr3";

SELECT
  *
FROM
  ec1,
  (SELECT
    ff + 1 AS x
  FROM
    (SELECT ff + 2 AS ff FROM ec1
    UNION ALL
    SELECT ff + 3 AS ff FROM ec1)
    AS ss0
  UNION ALL
  SELECT ff + 4 AS x FROM ec1)
  AS ss1
WHERE
  ss1.x = ec1.f1 AND
  ec1.ff = CAST(42 AS BIGINT);

SET enable_mergejoin = 'on';

SET enable_nestloop = off;

SELECT
  *
FROM
  ec1,
  (SELECT
    ff + 1 AS x
  FROM
    (SELECT ff + 2 AS ff FROM ec1
    UNION ALL
    SELECT ff + 3 AS ff FROM ec1)
    AS ss0
  UNION ALL
  SELECT ff + 4 AS x FROM ec1)
  AS ss1
WHERE
  ss1.x = ec1.f1 AND
  ec1.ff = CAST(42 AS BIGINT);

SET enable_nestloop = 'on';

SET enable_mergejoin = off;

ALTER TABLE ec1
  ENABLE ROW LEVEL SECURITY;

CREATE POLICY p1
ON ec1
AS PERMISSIVE
FOR ALL
TO PUBLIC
USING (f1 < CAST('5' AS int8alias1));

CREATE USER regress_user_ectest;

GRANT SELECT ON TABLE ec0 TO regress_user_ectest;

GRANT SELECT ON TABLE ec1 TO regress_user_ectest;

SELECT
  *
FROM
  ec0 AS a,
  ec1 AS b
WHERE
  a.ff = b.ff AND
  a.ff =
  CAST(CAST(43 AS BIGINT) AS int8alias1);

SET SESSION AUTHORIZATION regress_user_ectest;

SELECT
  *
FROM
  ec0 AS a,
  ec1 AS b
WHERE
  a.ff = b.ff AND
  a.ff =
  CAST(CAST(43 AS BIGINT) AS int8alias1);

RESET session_authorization;

REVOKE SELECT ON TABLE ec0 FROM regress_user_ectest;

REVOKE SELECT ON TABLE ec1 FROM regress_user_ectest;

DROP ROLE regress_user_ectest;

SELECT * FROM tenk1 WHERE unique1 = unique1 AND unique2 = unique2;

SET enable_mergejoin = off;

SELECT
  *
FROM
  ec0 AS m
  INNER JOIN
    ec0 AS n
  ON m.ff = n.ff
  INNER JOIN
    ec1 AS p
  ON m.ff + n.ff = p.f1;

SELECT
  *
FROM
  ec0 AS m
  INNER JOIN
    ec0 AS n
  ON m.ff = n.ff
  INNER JOIN
    ec1 AS p
  ON CAST(p.f1 AS BIGINT) =
    CAST(m.ff + n.ff AS int8alias1);

RESET enable_mergejoin;

SELECT * FROM tenk1 WHERE unique1 = unique1 OR unique2 = unique2;

CREATE TEMPORARY TABLE undername (
  f1 NAME,
  f2 INT
);

CREATE TEMPORARY VIEW overview
AS SELECT
  CAST(f1
  AS information_schema.sql_identifier)
  AS sqli,
  f2
FROM
  undername;

SELECT * FROM overview WHERE sqli = 'foo' ORDER BY sqli;

BEGIN;

CREATE TABLE tbl_nocom (
  a BIGINT,
  b int8alias1
);

SET enable_hashjoin = off;

SET enable_mergejoin = 'on';

SELECT * FROM tbl_nocom AS t1 FULL OUTER JOIN tbl_nocom AS t2 ON t2.a = t1.b;

ALTER OPERATOR = (BIGINT, int8alias1) SET (hashes);

ALTER OPERATOR FAMILY integer_ops USING hash
  ADD OPERATOR 1 = (BIGINT, int8alias1);

CREATE FUNCTION hashint8alias1(int8alias1)
RETURNS INT
STRICT
IMMUTABLE
LANGUAGE "internal"
AS 'hashint8';

ALTER OPERATOR FAMILY integer_ops USING hash
  ADD FUNCTION 1 hashint8alias1(int8alias1);

SET enable_hashjoin = 'on';

SET enable_mergejoin = off;

SELECT * FROM tbl_nocom AS t1 FULL OUTER JOIN tbl_nocom AS t2 ON t2.a = t1.b;

ROLLBACK;
